--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="images/familyphone.jpg" alt="Ganesh Patil" width="300" />
+                    <img src="familyphone.jpg" alt="Ganesh Patil" width="300" />
                 </td>
                 <td>
                     <h1>Ganesh Bhagwat Patil</h1>
