--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="familyphone.jpg" alt="Ganesh Patil" width="300" />
+                    <img src="myphoto.jpg" alt="Ganesh Patil" width="200px" />
                 </td>
                 <td>
                     <h1>Ganesh Bhagwat Patil</h1>
@@ -39,7 +39,7 @@
         <section id="marksheet">
             <table>
                 <caption>
-                    My Marksheet
+                    <h2>My Marksheet</h2>
                 </caption>
                 <colgroup>
                     <col span="3" style="background-color: antiquewhite" />
