--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="myphoto.jpg" alt="Ganesh Patil" width="200px" />
+                    <a href = "https://github.com/ganeshpatil2003" target = "_blank"><img src="myphoto.jpg" alt="Ganesh Patil" width="200px" /></a>
                 </td>
                 <td>
                     <h1>Ganesh Bhagwat Patil</h1>
